2012-10-09  Simon Hausmann  <simon.hausmann@digia.com>

        [Qt] Fix build with QtMultimedia

        Reviewed by Tor Arne Vestbø.

        * WebKit1.pri: WK1 needs QtMultimediaWidgets for QVideoWidget and friends.

2012-10-08  Simon Hausmann  <simon.hausmann@digia.com>

        [Qt] Make RenderThemeQStyle/ScrollbarThemeQStyle compile without QStyle/QtWidgets
        https://bugs.webkit.org/show_bug.cgi?id=98268

        Reviewed by Tor Arne Vestbø.

        * WebKit1.pro: Add new files to the build.

2012-10-04  Rob Buis  <rbuis@rim.com>

        [BlackBerry] Sync up CMake files
        https://bugs.webkit.org/show_bug.cgi?id=98442

        Reviewed by Gyuyoung Kim.

        Amongst others use InspectorOverlayBlackBerry.

        * PlatformBlackBerry.cmake:

2012-10-05  Simon Hausmann  <simon.hausmann@digia.com>

        Unreviewed, rolling out r130495.
        http://trac.webkit.org/changeset/130495
        https://bugs.webkit.org/show_bug.cgi?id=98268

        Made WK2 tests crash....

        * WebKit1.pro:

2012-10-05  Simon Hausmann  <simon.hausmann@digia.com>

        [Qt] Make RenderThemeQStyle/ScrollbarThemeQStyle compile without QStyle/QtWidgets
        https://bugs.webkit.org/show_bug.cgi?id=98268

        Reviewed by Tor Arne Vestbø.

        * WebKit1.pro: Add new files to the build.

2012-10-04  Konrad Piascik  <kpiascik@rim.com>

        [BlackBerry] Update how we compile inspector front-end javascript.
        https://bugs.webkit.org/show_bug.cgi?id=98413

        Reviewed by Rob Buis.

        No longer cat all JavaScript together, instead use the lazy init and
        only append our custom changes script to the end of inspectorBB.html.

        * PlatformBlackBerry.cmake:

2012-10-03  Ryuan Choi  <ryuan.choi@samsung.com>

        [EFL] Default.edj should be generated although ENABLE_WEBKIT disabled.
        https://bugs.webkit.org/show_bug.cgi?id=97753

        Reviewed by Laszlo Gombos.
