@@ -1,3 +1,15 @@
+2012-10-10  Konrad Piascik  <kpiascik@rim.com>
+
+        [BlackBerry] Install inspector files into staging directory.
+        https://bugs.webkit.org/show_bug.cgi?id=98930
+
+        Reviewed by Rob Buis.
+
+        Internally reviewed by Ming Xie.
+        Install the web inspector resources into the staging directory to make it easier to flash to device.
+
+        * PlatformBlackBerry.cmake:
+
 2012-10-09  Simon Hausmann  <simon.hausmann@digia.com>
 
         [Qt] Fix build with QtMultimedia
